--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
+    /*height: 100vh;*/
 }
 
 h1 {
@@ -94,6 +94,7 @@ button:hover {
 
 .pokemonFlex {
     display: flex;
+    height: 82vh;
 }
 
 /* -----POKEMONFLEX | LEFT----- */
@@ -104,7 +105,7 @@ button:hover {
     justify-content: center;
     align-items: center;
     width: 50vw;
-    margin-block: 40px;
+    margin-block: 20px;
 }
 
 #pokemonDetail-error {
@@ -359,4 +360,24 @@ button:hover {
 #pokemon_card--button:hover {
     scale: 1.15;
     cursor: pointer;
+}
+
+.footer {
+    background-color: rgba(0, 0, 0, 0.425);
+    padding: 10px;
+    color: white;
+}
+
+@media screen and (max-width: 1060px) {
+    .pokemonFlex {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: auto;
+    }
+
+    #pokemonsCard {
+        width: 100%;
+    }
+
 }
